clean pom and add draft remote ws

--- a/qalingo-webapp-remotes/pom.xml
+++ b/qalingo-webapp-remotes/pom.xml
@@ -17,6 +17,7 @@
 
 	<modules>
 		<module>qalingo-webapp-remote-rest</module>
+		<module>qalingo-webapp-remote-ws</module>
 	</modules>
 
 	<properties>
