--- a/pom.xml
+++ b/pom.xml
@@ -94,52 +94,17 @@
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-core-security</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-core-drools</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-api-core-jax-rs</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-core-solr</artifactId>
+				<artifactId>qalingo-api-core-ws</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-core-batch</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-web-bo-technical</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-web-bo-business</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-web-bo-reporting</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-web-fo-prehome</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-api-web-fo-mcommerce</artifactId>
+				<artifactId>qalingo-i18n</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -149,7 +114,7 @@
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
-				<artifactId>qalingo-i18n</artifactId>
+				<artifactId>qalingo-api-web-remote-ws</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			
@@ -278,70 +243,7 @@
 				<artifactId>spring-support</artifactId>
 				<version>2.0.8</version>
 			</dependency>
-			
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-core</artifactId>
-				<version>${spring-security.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-config</artifactId>
-				<version>${spring-security.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-web</artifactId>
-				<version>${spring-security.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.ws</groupId>
-				<artifactId>spring-ws-core</artifactId>
-				<version>${spring-ws.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.ws</groupId>
-				<artifactId>spring-ws-support</artifactId>
-				<version>${spring-ws.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.ws</groupId>
-				<artifactId>spring-ws-security</artifactId>
-				<version>${spring-ws.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.ws</groupId>
-				<artifactId>spring-xml</artifactId>
-				<version>${spring-ws.version}</version>
-			</dependency>
-            
-			<!-- Spring Batch -->
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-infrastructure</artifactId>
-				<version>${spring.batch.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-core</artifactId>
-				<version>${spring.batch.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-test</artifactId>
-				<version>${spring.batch.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-admin-manager</artifactId>
-				<version>${spring.batch.admin.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.batch</groupId>
-				<artifactId>spring-batch-admin-resources</artifactId>
-				<version>${spring.batch.admin.version}</version>
-			</dependency>
-			
+			            		
 			<!-- AspectJ framework -->	
 			<dependency>
 				<groupId>org.aspectj</groupId>
@@ -386,47 +288,7 @@
 				<artifactId>antlr</artifactId>
 				<version>2.7.7</version>
 			</dependency>
-		
-			<!-- SOLR -->
-			<dependency>
-				<groupId>org.apache.solr</groupId>
-				<artifactId>solr-solrj</artifactId>
-				<version>${solr.version}</version>
-			</dependency>
-			
-			<!-- DROOLS -->
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>drools-core</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>drools-compiler</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>drools-spring</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>knowledge-api</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>knowledge-internal-api</artifactId>
-				<version>${drools.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>jsr94</groupId>
-				<artifactId>jsr94</artifactId>
-				<version>1.1</version>
-			</dependency>
-
-            
+		           
 			<!-- Form Validation -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -448,13 +310,6 @@
 				<version>${jackson-version}</version>
 			</dependency>
 		
-			<!-- UI Vaadin -->
-			<dependency>
-				<groupId>com.vaadin</groupId>
-				<artifactId>vaadin</artifactId>
-				<version>7.0.0.alpha3</version>
-			</dependency>
-	
 			<!-- Logs dependencies -->
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
@@ -560,43 +415,43 @@
 			</dependency>
 			
 			<dependency>
-				<groupId>org.tuckey</groupId>
-				<artifactId>urlrewrite</artifactId>
-				<version>3.2.0</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>net.sourceforge.wurfl</groupId>
-				<artifactId>wurfl</artifactId>
-				<version>1.4.2</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>opensymphony</groupId>
-				<artifactId>clickstream</artifactId>
-				<version>1.0.3</version>
-			</dependency>
-			
-			<dependency>
 				<groupId>javax.mail</groupId>
 				<artifactId>mail</artifactId>
 				<version>1.4.5</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>com.google.gwt</groupId>
-				<artifactId>gwt-servlet</artifactId>
-				<version>${gwt.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.gwt</groupId>
-				<artifactId>gwt-user</artifactId>
-				<version>${gwt.version}</version>
 			</dependency>
             
 		</dependencies>
 	</dependencyManagement>
 
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
