--- a/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/webapp/WEB-INF/web.xml
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
     
-    <display-name>Qalingo Webapp Remote Rest</display-name>
-	<description>Qalingo Webapp Remote Rest</description>
+    <display-name>Qalingo Webapp Remote WS</display-name>
+	<description>Qalingo Webapp Remote WS</description>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -52,6 +52,25 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
     </filter-mapping>
+
+	<servlet>
+        <servlet-name>spring-ws</servlet-name>
+        <servlet-class>org.springframework.ws.transport.http.MessageDispatcherServlet</servlet-class>
+        <init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>
+				/WEB-INF/spring-ws-servlet.xml
+			</param-value>
+            <param-name>transformWsdlLocations</param-name>
+            <param-value>true</param-value>
+        </init-param>
+		<load-on-startup>2</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>spring-ws</servlet-name>
+        <url-pattern>/ws/*</url-pattern>
+    </servlet-mapping>
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
