--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,14 @@
 		<!-- Spring-batch -->
 		<spring.batch.version>2.1.9.RELEASE</spring.batch.version>
 		<spring.batch.admin.version>1.2.1.RELEASE</spring.batch.admin.version>
+		<!-- Datas -->
+		<hibernate.version>4.1.7.Final</hibernate.version>
+		<!-- CXF -->
+		<cxf.version>2.7.0</cxf.version>
 		<!-- SOLR -->
 		<solr.version>4.0.0-BETA</solr.version>
 		<!-- DROOLS -->
 		<drools.version>5.4.0.Final</drools.version>
-		<!-- Datas -->
-		<hibernate.version>4.1.7.Final</hibernate.version>
 		<!-- LOGS -->
 		<logback.version>1.0.6</logback.version>	
 		<slf4j.version>1.6.6</slf4j.version>
@@ -106,6 +108,12 @@
 				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-i18n</artifactId>
 				<version>${project.version}</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>poi</artifactId>
+						<groupId>org.apache.poi</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
@@ -148,18 +156,6 @@
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.4</version>
-			</dependency>
-			
-			<!-- JaxB libs -->
-			<dependency>
-				<groupId>com.sun.xml.bind</groupId>
-				<artifactId>jaxb-impl</artifactId>
-				<version>2.1.12</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
-				<version>2.1</version>
 			</dependency>
 
 			<!-- Springs libs -->
@@ -237,7 +233,6 @@
 				<artifactId>spring-jms</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
-			
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-support</artifactId>
@@ -289,25 +284,65 @@
 				<version>2.7.7</version>
 			</dependency>
 		           
-			<!-- Form Validation -->
+			<!-- CXF framework -->
 			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-validator</artifactId>
-				<version>4.2.0.Final</version>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-frontend-jaxws</artifactId>
+				<version>${cxf.version}</version>
 			</dependency>
-			
-			<!-- JSON -->
+			<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-transports-http</artifactId>
+				<version>${cxf.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-frontend-jaxrs</artifactId>
+				<version>${cxf.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.apache.xmlbeans</groupId>
+						<artifactId>xmlbeans</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>com.sun.xml.bind</groupId>
+						<artifactId>jaxb-impl</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.codehaus.woodstox</groupId>
+						<artifactId>woodstox-core-asl</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.codehaus.jettison</groupId>
+						<artifactId>jettison</artifactId>
+					</exclusion>
+					<exclusion>
+						<artifactId>cxf-rt-databinding-aegis</artifactId>
+						<groupId>org.apache.cxf</groupId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>javax.ws.rs</groupId>
+				<artifactId>jsr311-api</artifactId>
+				<version>1.1.1</version>
+			</dependency>
 			<dependency>
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-jaxrs</artifactId>
-				<version>${jackson-version}</version>
-				<type>jar</type>
-				<scope>compile</scope>
+				<version>1.8.0</version>
+			</dependency>
+			
+			<!-- JaxB libs -->
+			<dependency>
+				<groupId>com.sun.xml.bind</groupId>
+				<artifactId>jaxb-impl</artifactId>
+				<version>2.1.12</version>
 			</dependency>
 			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-mapper-asl</artifactId>
-				<version>${jackson-version}</version>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.1</version>
 			</dependency>
 		
 			<!-- Logs dependencies -->
@@ -320,13 +355,6 @@
 				<groupId>net.sf.ehcache</groupId>
 				<artifactId>ehcache-web</artifactId>
 				<version>2.0.4</version>
-			</dependency>
-		
-			<!-- Quartz -->
-			<dependency>
-				<groupId>quartz</groupId>
-				<artifactId>quartz</artifactId>
-				<version>1.5.2</version>
 			</dependency>
 
 			<!-- MySQL database driver -->
@@ -362,7 +390,19 @@
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
-
+		
+			<dependency>
+				<groupId>org.apache.velocity</groupId>
+				<artifactId>velocity</artifactId>
+				<version>1.7</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>mail</artifactId>
+				<version>1.4.5</version>
+			</dependency>
+            
 			<!-- Test dependencies -->
 			<dependency>
 				<groupId>junit</groupId>
@@ -407,19 +447,13 @@
 				<version>${spring.version}</version>
 				<scope>test</scope>
 			</dependency>
-			
 			<dependency>
-				<groupId>org.apache.velocity</groupId>
-				<artifactId>velocity</artifactId>
-				<version>1.7</version>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-testutils</artifactId>
+				<version>${cxf.version}</version>
+				<scope>test</scope>
 			</dependency>
 			
-			<dependency>
-				<groupId>javax.mail</groupId>
-				<artifactId>mail</artifactId>
-				<version>1.4.5</version>
-			</dependency>
-            
 		</dependencies>
 	</dependencyManagement>
 
@@ -442,7 +476,11 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-testutils</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
