--- a/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/webapp/WEB-INF/web.xml
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/webapp/WEB-INF/web.xml
@@ -36,22 +36,15 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-    <filter>
-        <filter-name>encodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-        <init-param>
-            <param-name>forceEncoding</param-name>
-            <param-value>true</param-value>
-        </init-param>
-    </filter>
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
+	<servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+		<load-on-startup>-1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/*</url-pattern>
-    </filter-mapping>
+	</servlet-mapping>
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
