--- a/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/webapp/WEB-INF/web.xml
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/webapp/WEB-INF/web.xml
@@ -54,23 +54,15 @@
     </filter-mapping>
 
 	<servlet>
-        <servlet-name>spring-ws</servlet-name>
-        <servlet-class>org.springframework.ws.transport.http.MessageDispatcherServlet</servlet-class>
-        <init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>
-				/WEB-INF/spring-ws-servlet.xml
-			</param-value>
-            <param-name>transformWsdlLocations</param-name>
-            <param-value>true</param-value>
-        </init-param>
-		<load-on-startup>2</load-on-startup>
-    </servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-    <servlet-mapping>
-        <servlet-name>spring-ws</servlet-name>
-        <url-pattern>/ws/*</url-pattern>
-    </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>CXFServlet</servlet-name>
+		<url-pattern>/*</url-pattern>
+	</servlet-mapping>
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
