--- a/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/jdbc.properties
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 #
 # Most of the code in the Qalingo project is copyrighted Hoteia and licensed
-# under the Apache License Version 2.0 (release version ${license.version})
+# under the Apache License Version 2.0 (release version 0.7.0)
 #         http://www.apache.org/licenses/LICENSE-2.0
 #
 #                   Copyright (c) Hoteia, 2012-2013
