fix SNAPSHOT version for release

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	
 	<properties>
 		<root.basedir>${project.basedir}</root.basedir> 
+		<qalingo.engine.version>0.7.0</qalingo.engine.version> 
 		<packaging.excludes>WEB-INF/classes/*.properties</packaging.excludes>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<solr.server.url>http://localhost:14080/solr</solr.server.url>
@@ -91,22 +92,22 @@
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-api-core-common</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-api-core-jax-rs</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-api-core-jax-ws</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-i18n</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>poi</artifactId>
@@ -117,12 +118,12 @@
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-api-web-remote-rest</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>fr.hoteia.qalingo</groupId>
 				<artifactId>qalingo-api-web-remote-ws</artifactId>
-				<version>${project.version}</version>
+				<version>${qalingo.engine.version}</version>
 			</dependency>
 			
 			<!-- Commons libs -->
