--- a/qalingo-webapp-remotes/qalingo-webapp-remote-ws/pom.xml
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-ws/pom.xml
@@ -60,7 +60,7 @@
 		</dependency>
 		<dependency>
 			<groupId>fr.hoteia.qalingo</groupId>
-			<artifactId>qalingo-i18n</artifactId>
+			<artifactId>qalingo-i18n-properties</artifactId>
 		</dependency>
 		
 		<!-- Commons libs-->
