--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 				<spring.security.context.relative>true</spring.security.context.relative>
 				<env.name>demo</env.name>
 
-				<wurfl.xml.path>file:///home/servers/qalingo/jenkins/home/jobs/Build-deploy-FO-Resources-Qalingo/workspace/parent-hoteia-qalingo/qalingo-misc/qalingo-wurfl/src/main/resources/wurfl.zip</wurfl.xml.path>
+				<wurfl.xml.path>file:///home/servers/qalingo/misc/wurfl/wurfl.zip</wurfl.xml.path>
 			</properties>
 		</profile>
 		<profile>
@@ -82,7 +82,7 @@
 				<batch.jdbc.password>password</batch.jdbc.password>
 				<batch.jdbc.url>jdbc:mysql://localhost:3306/qalingo?AutoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf-8</batch.jdbc.url>
 				
-				<wurfl.xml.path>file:///C:/dev/hoteia/qalingo/workspace/git/qalingo-b2c-engine/qalingo-misc/qalingo-wurfl/src/main/resources/wurfl.zip</wurfl.xml.path>
+				<wurfl.xml.path>file:///C:/dev/hoteia/qalingo/workspace/misc/wurfl/wurfl.zip</wurfl.xml.path>
 			</properties>
 		</profile>
 	</profiles>
@@ -331,7 +331,7 @@
 			<dependency>
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-jaxrs</artifactId>
-				<version>1.8.0</version>
+				<version>${jackson-version}</version>
 			</dependency>
 			
 			<!-- JaxB libs -->
