--- a/qalingo-webapp-remotes/qalingo-webapp-remote-ws/pom.xml
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-ws/pom.xml
@@ -212,6 +212,16 @@
 			<artifactId>ehcache-web</artifactId>
 		</dependency>
 		
+		<!-- UI Velocity framework -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-tools</artifactId>
+		</dependency>
+		
 		<!-- These dependencies are here just for enabling logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
