--- a/pom.xml
+++ b/pom.xml
@@ -375,10 +375,16 @@
 				<version>${slf4j.version}</version>
 			</dependency>
 		
+			<!-- UI Velocity framework -->
 			<dependency>
 				<groupId>org.apache.velocity</groupId>
 				<artifactId>velocity</artifactId>
 				<version>1.7</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.velocity</groupId>
+				<artifactId>velocity-tools</artifactId>
+				<version>2.0</version>
 			</dependency>
 			
 			<dependency>
