--- a/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
@@ -7,5 +7,9 @@
 # http://www.hoteia.com - http://twitter.com/hoteia - contact@hoteia.com
 #
 #
-
 env.name=${env.name}
+app.name=remote-rest
+context.name=REMOTE_REST
+spring.security.context.relative=${spring.security.context.relative}
+
+velocity.file.resource.loader.path=
