--- a/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
@@ -12,4 +12,6 @@ app.name=remote-rest
 context.name=REMOTE_REST
 spring.security.context.relative=${spring.security.context.relative}
 
+jms.connection.factory.clientId=qalingo.jms.instance.remote.rest
+
 velocity.file.resource.loader.path=
