--- a/qalingo-webapp-remotes/qalingo-webapp-remote-rest/pom.xml
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-rest/pom.xml
@@ -62,27 +62,31 @@
 	<dependencies>
 		<!-- Qalingo libs -->
 		<dependency>
-			<groupId>fr.hoteia.qalingo</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>qalingo-common-shared-configuration</artifactId>
 			<classifier>resources</classifier>
 			<type>zip</type>
 		</dependency>
 		<dependency>
-			<groupId>fr.hoteia.qalingo</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>qalingo-frontoffice-shared-configuration</artifactId>
 			<classifier>resources</classifier>
 			<type>zip</type>
 		</dependency>
 		<dependency>
-			<groupId>fr.hoteia.qalingo</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>qalingo-api-core-common</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>fr.hoteia.qalingo</groupId>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>qalingo-api-core-jms</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>qalingo-api-core-jax-rs</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>fr.hoteia.qalingo</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>qalingo-api-web-remote-rest</artifactId>
 		</dependency>
 
