--- a/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/resources/specific-qalingo-env.properties
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/resources/specific-qalingo-env.properties
@@ -12,4 +12,6 @@ app.name=remote-ws
 context.name=REMOTE_WS
 spring.security.context.relative=${spring.security.context.relative}
 
+jms.connection.factory.clientId=qalingo.jms.instance.remote.ws
+
 velocity.file.resource.loader.path=
