fix Jackson Mapper for Spring + JMS properties conf

--- a/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
@@ -8,6 +8,7 @@
 #
 #
 env.name=${env.name}
+env.id=01
 app.name=remote-rest
 context.name=REMOTE_REST
 spring.security.context.relative=${spring.security.context.relative}
