--- a/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/resources/specific-qalingo-env.properties
+++ b/qalingo-webapp-remotes/qalingo-webapp-remote-ws/src/main/resources/specific-qalingo-env.properties
@@ -8,6 +8,7 @@
 #
 #
 env.name=${env.name}
+env.id=01
 app.name=remote-ws
 context.name=REMOTE_WS
 spring.security.context.relative=${spring.security.context.relative}
