--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		<solr.version>4.0.0</solr.version>
 		<!-- DROOLS -->
 		<drools.version>5.4.0.Final</drools.version>
-		<jackson-version>1.8.0</jackson-version>
+		<jackson.version>2.1.0</jackson.version>
 	</properties>
 
 	<modules>
@@ -325,11 +325,12 @@
 				<artifactId>jsr311-api</artifactId>
 				<version>1.1.1</version>
 			</dependency>
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-jaxrs</artifactId>
-				<version>${jackson-version}</version>
-			</dependency>
+            <!-- JACKSON Libs : JSON -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-json-provider</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
 
 			<!-- JaxB libs -->
 			<dependency>
