--- a/webapp-remotes/pom.xml
+++ b/webapp-remotes/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>fr.hoteia.qalingo</groupId>
+		<groupId>org.hoteia.qalingo</groupId>
 		<artifactId>qalingo-b2c-web-remote</artifactId>
 		<version>0.7.1-SNAPSHOT</version>
 	</parent>
@@ -17,8 +17,8 @@
 	</organization>
 
 	<modules>
-		<module>qalingo-webapp-remote-rest</module>
-		<module>qalingo-webapp-remote-ws</module>
+		<module>webapp-remote-rest</module>
+		<module>webapp-remote-ws</module>
 	</modules>
 
 	<properties>
