--- a/webapp-remotes/webapp-remote-ws/pom.xml
+++ b/webapp-remotes/webapp-remote-ws/pom.xml
@@ -1,66 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>fr.hoteia.qalingo</groupId>
+		<groupId>org.hoteia.qalingo</groupId>
 		<artifactId>qalingo-webapp-remotes</artifactId>
 		<version>0.7.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>qalingo-webapp-remote-rest</artifactId>
+	<artifactId>qalingo-webapp-remote-ws</artifactId>
 	<packaging>war</packaging>
-	<name>{Q} Commerce Solution Remote Rest webapp</name>
-	<description>{Q} Commerce Solution Remote Rest webapp</description>
+	<name>{Q} Commerce Solution Remote WS webapp</name>
+	<description>{Q} Commerce Solution Remote WS webapp</description>
 	<url>http://www.hoteia.com</url>
 	<organization>
 		<name>Hoteia</name>
 		<url>http://www.hoteia.com</url>
 	</organization>
-
-	<properties>
-		<root.basedir>${project.parent.parent.basedir}</root.basedir>
+	
+	<properties>	
+		<root.basedir>${project.parent.parent.basedir}</root.basedir> 
 		<deploy.server.id>tomcatQalingo</deploy.server.id>
 		<deploy.server.ip>localhost</deploy.server.ip>
-		<deploy.webapp.port>22080</deploy.webapp.port>
-		<deploy.webapp.path>/remote-rest</deploy.webapp.path>
+		<deploy.webapp.port>23080</deploy.webapp.port>
+		<deploy.webapp.path>/remote-ws</deploy.webapp.path>
 	</properties>
-
+	
 	<build>
-		<finalName>remote-rest</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
+		<finalName>remote-ws</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
-				<filtering>false</filtering>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.properties</include>
 				</includes>
-				<filtering>true</filtering>
-			</resource>
+                <filtering>true</filtering>
+            </resource>
 			<resource>
 				<directory>${project.build.directory}/generated-resources</directory>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
-				<filtering>false</filtering>
+                <filtering>false</filtering>
 			</resource>
 			<resource>
 				<directory>${project.build.directory}/generated-resources</directory>
 				<includes>
 					<include>**/*.properties</include>
 				</includes>
-				<filtering>true</filtering>
+                <filtering>true</filtering>
 			</resource>
-		</resources>
+        </resources>
 	</build>
-
+	
 	<dependencies>
-		<!-- Qalingo libs -->
+		<!-- Qalingo libs-->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>qalingo-common-shared-configuration</artifactId>
@@ -83,14 +82,18 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>qalingo-api-core-jax-rs</artifactId>
+			<artifactId>qalingo-api-core-jax-ws</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>qalingo-api-web-remote-rest</artifactId>
+			<artifactId>qalingo-api-web-remote-ws</artifactId>
 		</dependency>
-
-		<!-- Commons libs -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>qalingo-i18n-properties</artifactId>
+		</dependency>
+		
+		<!-- Commons libs-->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -115,7 +118,14 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
-
+		
+		<!-- JUnit testing framework -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 		<!-- Spring dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -133,9 +143,9 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aspects</artifactId>
+		<dependency>  
+			<groupId>org.springframework</groupId>  
+			<artifactId>spring-aspects</artifactId>  
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -167,7 +177,7 @@
 			<artifactId>spring-context</artifactId>
 		</dependency>
 
-		<!-- AspectJ framework -->
+		<!-- AspectJ framework -->	
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
@@ -176,7 +186,7 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 		</dependency>
-
+		
 		<!-- Hibernate framework -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -200,26 +210,12 @@
 			<artifactId>antlr</artifactId>
 		</dependency>
 
-		<!-- CXF framework -->
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
-		</dependency>
-
 		<!-- Cache dependencies -->
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-web</artifactId>
 		</dependency>
-
+		
 		<!-- UI Velocity framework -->
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
@@ -229,9 +225,11 @@
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity-tools</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-servlet-api</artifactId>
 		</dependency>
+
 	</dependencies>
 </project>
