--- a/webapp-remotes/webapp-remote-rest/pom.xml
+++ b/webapp-remotes/webapp-remote-rest/pom.xml
@@ -214,11 +214,12 @@
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 		</dependency>
 
-		<!-- Cache dependencies -->
+		<!-- Cache dependencies
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-web</artifactId>
 		</dependency>
+		 -->
 
 		<!-- UI Velocity framework -->
 		<dependency>
