--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.hoteia.qalingo</groupId>
-	<artifactId>qalingo-b2c-web-remote</artifactId>
+	<artifactId>qalingo-web-remote</artifactId>
 	<version>0.7.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>qalingo-b2c-web-remote</name>
+	<name>qalingo-web-remote</name>
 	<description>{Q} Commerce Solution Project</description>
 	<url>http://www.hoteia.com</url>
 	<inceptionYear>2012-2014</inceptionYear>
@@ -16,9 +16,9 @@
 	</organization>
 
 	<scm>
-		<connection>scm:git:git@github.com:qalingo/qalingo-b2c-web-remote.git</connection>
-		<developerConnection>scm:git:git@github.com:qalingo/qalingo-b2c-web-remote.git</developerConnection>
-		<url>scm:git:git@github.com:qalingo/qalingo-b2c-web-remote.git</url>
+		<connection>scm:git:git@github.com:qalingo/qalingo-web-remote.git</connection>
+		<developerConnection>scm:git:git@github.com:qalingo/qalingo-web-remote.git</developerConnection>
+		<url>scm:git:git@github.com:qalingo/qalingo-web-remote.git</url>
 		<tag>HEAD</tag>
 	</scm>
 
