--- a/webapp-remotes/pom.xml
+++ b/webapp-remotes/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.hoteia.qalingo</groupId>
-		<artifactId>qalingo-b2c-web-remote</artifactId>
+		<artifactId>qalingo-web-remote</artifactId>
 		<version>0.7.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>qalingo-webapp-remotes</artifactId>
