fix bug with license plugin

--- a/webapp-remotes/webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
+++ b/webapp-remotes/webapp-remote-rest/src/main/resources/specific-qalingo-env.properties
@@ -8,6 +8,12 @@
 #
 #
 
+env.name=${env.name}
+env.id=01
+app.name=remote-rest
+context.name=REMOTE_REST
+spring.security.context.relative=${spring.security.context.relative}
+
 jms.connection.factory.clientId=qalingo.jms.instance.remote.rest
 
 velocity.file.resource.loader.path=
