--- a/webapp-remotes/webapp-remote-ws/src/main/resources/specific-qalingo-env.properties
+++ b/webapp-remotes/webapp-remote-ws/src/main/resources/specific-qalingo-env.properties
@@ -8,6 +8,12 @@
 #
 #
 
+env.name=${env.name}
+env.id=01
+app.name=remote-ws
+context.name=REMOTE_WS
+spring.security.context.relative=${spring.security.context.relative}
+
 jms.connection.factory.clientId=qalingo.jms.instance.remote.ws
 
 velocity.file.resource.loader.path=
