remore-rest -> remote-rest-frontoffice

--- a/webapp-remotes/pom.xml
+++ b/webapp-remotes/pom.xml
@@ -16,7 +16,7 @@
 	</organization>
 
 	<modules>
-		<module>webapp-remote-rest</module>
+		<module>webapp-remote-rest-frontoffice</module>
 		<module>webapp-remote-ws</module>
 	</modules>
 
